--- a/seed-server/Dockerfile
+++ b/seed-server/Dockerfile
@@ -14,13 +14,13 @@ RUN go mod download
 COPY ./cmd ./cmd
 COPY ./pkg ./pkg
 ARG TARGETARCH
-RUN make build-openvpn-exporter build-seed-server GOARCH=$TARGETARCH
+RUN make build-seed-server GOARCH=$TARGETARCH
 
 FROM cgr.dev/chainguard/wolfi-base
-RUN apk add openvpn ip6tables iptables
-# delete apk to ensure no additional packages can be installed
-RUN rm $(which apk)
-RUN rm -r /var/cache/apk
-COPY --from=gobuilder /build/bin/openvpn-exporter /build/bin/seed-server /bin/
+RUN apk update && \
+    apk add openvpn ip6tables iptables && \
+    rm $(which apk) && \
+    rm -r /var/cache/apk
 RUN mkdir -p ./client-config-dir
+COPY --from=gobuilder /build/bin/seed-server /bin/
 ENTRYPOINT [ "/bin/seed-server" ]
